update -> spanish and english

--- a/index_english.html
+++ b/index_english.html
@@ -44,21 +44,20 @@ $(document).ready(function() {
 		<div class="col-sm-12">
 
 			<p class="synopsis">
-				FOODAL es un proyecto financiado por la Comunidad de Madrid,
-				orientado desde un punto de vista translacional, y dirigido
-				a los problemas encontrados en la gesión de alergias
-				alimentarias, tanto a nivel de seguridad alimentaria como
-				tratamiento.
+				FOODAL is a project funded by Comunidad de Madrid, that is
+				oriented from a translational point of view, addressing the
+				problems encountered in the management of food allergies,
+				both at the levels of food safety and treatment.
 			</p>
 
 			<p class="synopsis">
-				Proponemos un enfoque multidisciplinar que integra la
-				experiencia del consorcio en los ámbitos de la biotecnología
-				médica, la nanotecnología de partículas, y los modelos animales,
-				con el fin de desarrollar dos soluciones innovadoras. Estas
-				dos soluciones serían transferidas al sector privado para su
-				explotación comercial, con el fin de mejorar la calidad de vida
-				de los pacientes de alergia.
+				We propose
+				a multidisciplinary approach integrating the consortium's
+				experience in health biotechnology, particle nanotechnology
+				and animal models, with the aim of developing two innovative
+				solutions. These two solutions aim to be transferred to the
+				private sector for its exploitation in order to improve the
+				quality of life of allergic patients.
 			</p>
 
 		</div>
@@ -68,30 +67,27 @@ $(document).ready(function() {
 
 
 <div class="container front-page" id="goals">
-	<h1 class="display-4">Nuestros objetivos</h1>
+	<h1 class="display-4">Our goals</h1>
 
 
-	<h2 class="display-5">Detection de alérgenos ocultos</h2>
-
-	<p>
-		Estamos trabajando en el desarrollo de una revolucionaria herramienta
-		capaz de detectar alérgenos ocultos en matrices alimentarias. De esta
-		manera, se podrían evitar las interacciones accidentales entre pacientes alérgicos y
-		alérgenos a través de un dispositivo portable y fácil de utilizar en
-		todos los puntos de distribución de alimentos.
-
- 	</p>
-
-	<h2 class="display-5">Desarrollo de una nueva fórmula para el tratamiento
-		de la alergia alimentaria</h2>
+	<h2 class="display-5">Detection of hidden allergens</h2>
 
 	<p>
+		We are working on the development of a revolutionary tool able to
+		detect hidden allergens in food matrices. These way, accidental
+		interactions between allergic patients and the allergens could be
+		avoided by means of a portable and easily usable system in all food
+		distribution points. </p>
 
-		La alergia es una patología que actualmente no cuenta con un tratamiento
-		más allá de evitar los alimentos involucrados en la alergia, y el uso de
-		fármacos para paliar los síntomas tras una reacción alérgica. En
-		estas circunstancias, proponemos una nueva fórmula de inmunoterapia
-		dirigida a <em>curar</em> o aliviar la enfermedad.
+	<h2 class="display-5">Development of a new formula for the treatment of
+		food allergy</h2>
+
+	<p>
+		Allergy is a pathology that currently does not count on a treatment,
+		different than the avoidance of the foods involved and the drugs used
+		to palliate the symptoms after an allergic reaction. Under these
+		circumstances, we propose a new immunotherapy formula aiming to
+		<em>cure</em>' or at least alleviate the disease.
 	</p>
 <!--
 	<p class="synopsis">
@@ -125,15 +121,13 @@ $(document).ready(function() {
 
 <div class="container front-page" id="people">
 
-	<h1 class="display-4">Nuestro equipo</h1>
+	<h1 class="display-4">Our team</h1>
 
-	<p class="synopsis">
-		En Foodal, creemos que la <strong>multidisciplinariedad </strong>
-		es la única manera de dar pasos importantes hacia el conocimiento y
-		la innovación. Por eso, nuestro trabajo es llevado a cabo por
-		diferentes grupos, cada uno de los cuales provee diferentes
-		habilidades y puntos de vista.
-
+	<p class="synopsis"> At Foodal, we believe that
+		<strong>multidisciplarity</strong> is the only way to reach important
+		steps towards knowdlege and innovation. Different groups, providing
+		different skills and point of views work toghether in this project
+		to reach our goals.
 	</p>
 
 
@@ -162,14 +156,14 @@ $(document).ready(function() {
 
 <div class="container front-page" id="services">
 
-	<h1 class="display-4">Nuestros servicios</h1>
+	<h1 class="display-4">Our services</h1>
 
 	<p class="synopsis">
-		Proveemos servicios de microscopía a través de nuestro participante,
-		el laboratorio 390 de la
-		<em>Red de Laboratorios de la Comunidad de Madrid</em>. Sus servicios
-		se pueden consultar
-		<a href="http://www.cbgp.upm.es/index.php/es/servicios/servicio-microscopia">aquí</a>.
+
+		We provide microscopy services through our particpant, the lab 390 of
+		the <em>Red de Laboratorios de la Comunidad de Madrid</em>. Its
+		services can be consulted
+		<a href="http://www.cbgp.upm.es/index.php/es/servicios/servicio-microscopia">here</a>.
 
 
 	</p>
@@ -179,9 +173,10 @@ $(document).ready(function() {
 
 <div class="container front-page" id="events">
 
-	<h1 class="display-4">Próximos eventos</h1>
+	<h1 class="display-4">Next events</h1>
 
-	<p class="synopsis"> Comprueba nuestros próximos eventos en nuestro calendario.
+	<p class="synopsis"> Check our latest events (talks, seminars, workshops,
+		and meetings) in our calendar.
 	</p>
 
 	<div id="calendar"></div>
@@ -191,10 +186,10 @@ $(document).ready(function() {
 
 <div class="container front-page" id="updates">
 
-	<h1 class="display-4">Noticias Y resultados</h1>
+	<h1 class="display-4">News & Results</h1>
 
-	<p class="synopsis"> Comprueba nuestras últimas noticias y resultados;
-		incluyendo ofertas de trabajo, publicaciones y patentes
+	<p class="synopsis"> Check our latest posts about our results and news;
+		including job offers, patents and publications.
 	</p>
 
 	<ul>
@@ -214,10 +209,11 @@ $(document).ready(function() {
 
 <div class="container front-page" id="contact">
 
-	<h1 class="display-4">Contáctonos</h1>
+	<h1 class="display-4">Contact with us</h1>
 
 	<p class="synopsis">
-		Puedes contactar con nosotros por correo electrónico.
+
+		You can contact with us by mail writting to the following addresses
 
 	</p>
 
@@ -229,7 +225,7 @@ $(document).ready(function() {
 
 	<div class="container">
 
-		<h1 class="display-4">Financiación</h1>
+		<h1 class="display-4">Funded by</h1>
 
 		<img src="/assets/logos.png" alt="" width="100%">
 		<!-- <div class="row"> -->
