project title added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@ $(document).ready(function() {
 		</div> -->
 
 		<div class="col-sm-12">
+			<h1>Teranóstica de las VNPs para las alergias alimentarias (S2018/BAA-4574)</h1>
+		</div>
+
+		<div class="col-sm-12">
 
 			<p class="synopsis">
 				FOODAL es un proyecto financiado por la Comunidad de Madrid,
